Managed/Image/Internal/Generated/ImageNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.Image.Internal;

[StructLayout(LayoutKind.Sequential)]
internal partial struct NativeImageDesc
{
    public uint Format;
    public uint Width;
    public uint Height;
}

[StructLayout(LayoutKind.Sequential)]
internal partial struct NativeImageData
{
    public IntPtr Data;
    public ulong DataSize;
    public NativeImageDesc Desc;
}

internal static partial class ImageNativeGenerated
{
    [DllImport("LunaImageC", EntryPoint = "luna_image_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule();

    [DllImport("LunaImageC", EntryPoint = "luna_image_read_file_desc", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ReadFileDesc(IntPtr data, ulong dataSize, out NativeImageDesc outDesc);

    [DllImport("LunaImageC", EntryPoint = "luna_image_read_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ReadFile(IntPtr data, ulong dataSize, uint desiredFormat, out NativeImageData outImage);

    [DllImport("LunaImageC", EntryPoint = "luna_image_write_png_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WritePngFile(IntPtr stream, in NativeImageDesc desc, IntPtr data, ulong dataSize);

    [DllImport("LunaImageC", EntryPoint = "luna_image_write_bmp_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteBmpFile(IntPtr stream, in NativeImageDesc desc, IntPtr data, ulong dataSize);

    [DllImport("LunaImageC", EntryPoint = "luna_image_write_tga_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteTgaFile(IntPtr stream, in NativeImageDesc desc, IntPtr data, ulong dataSize);

    [DllImport("LunaImageC", EntryPoint = "luna_image_write_jpg_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteJpgFile(IntPtr stream, in NativeImageDesc desc, IntPtr data, ulong dataSize, uint quality);

    [DllImport("LunaImageC", EntryPoint = "luna_image_write_hdr_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteHdrFile(IntPtr stream, in NativeImageDesc desc, IntPtr data, ulong dataSize);

    [DllImport("LunaImageC", EntryPoint = "luna_image_free_data", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeData(ref NativeImageData image);

}
